# Clientless

./: Cargo.toml  LICENSE  README.md  debug.sh  release.sh
bots/: Cargo.toml
bots/src/: main.rs
config/: accounts.json  settings.json
realmlib/: Cargo.toml
realmlib/src/: account.rs  client.rs  game.rs  lib.rs
realmlib/src/network/: buffer.rs  factory.rs  mod.rs  types.rs
realmlib/src/network/packets/: client_packets.rs  mod.rs  server_packets.rs
realmlib/src/utils/: mod.rs  rc4.rs  rsa.rs
realmlib/tests/: impl.rs  tests.rs
