[package]
name = "realmlib"
version = "1.0.0"
authors = ["Zeroeh"]
edition = "2018"


# Keep dependencies the same, unless verified that the next update works
[dependencies]
base64 = "0.11.0"
openssl = "0.10.26"
rand = "0.7.2"
socks = "0.3.2"
fnv = "1.0.6"
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"] }
